--- a/Zeratool player C Sharp/ZeratoolPlayerGui.resx
+++ b/Zeratool player C Sharp/ZeratoolPlayerGui.resx
@@ -169,6 +169,9 @@
         /xLck2XY/BRVtihVjy3cM5550bMbtf1lMPYrTmCph4UvfIAAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>272, 17</value>
+  </metadata>
   <data name="btnNextTrack.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
